[package]
name = "fez-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
flate2 = "1.1.9"
crossterm = { version = "0.29", optional = true }

[features]
default = ["parser", "vm", "type-checker"]
repl = ["crossterm"]
parser = []
vm = ["parser"]
type-checker = ["parser"]
js-compiler = ["parser"]
report = ["vm", "type-checker"]
